--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
     </div>   
     <!-- Footer socials -->  
     <div class="footer-socials">
-        <h3 class="footer-header">Social media</h3>
+        <p class="footer-paragraph">Social media</p>
         <ul class="footer-links">
             
             <!-- instagram -->
